--- a/Project 4/templates/head.html
+++ b/Project 4/templates/head.html
@@ -4,5 +4,6 @@
 
 <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
-<title>Restaurant Menu</title>
+<title>Catalog App</title>
