--- a/Project 4/templates/catalog.html
+++ b/Project 4/templates/catalog.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-lg-8 col-md-6">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row my-2 my-md-0">
                     <div class="col-lg-8">
                         <h1><span class="fa fa-soccer-ball-o"></span> Latest Items</h1>
                     </div>
