--- a/Project 4/templates/catalog.html
+++ b/Project 4/templates/catalog.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container bg-light p-4">
     <div class="row">
         <div class="col-lg-4 col-md-6 mycontent-left mb-sm-4">
             <div class="container-fluid">
