--- a/Project 4/templates/header.html
+++ b/Project 4/templates/header.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#"><span class="fa fa-home"></span> Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('show_catalog') }}"><span class="fa fa-home"></span> Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-list-alt"></span> Categories</a>
                 <ul class="dropdown-menu" id="categoriesMenu" aria-labelledby="dropdown01">
                     {% for category in categories %}
-                    <a class="dropdown-item" href="#">{{ category['name'] }}</a>
+                    <a class="dropdown-item" href="{{ url_for('show_category_items', category_name=category['name']) }}">{{ category['name'] }}</a>
                     {% endfor %}
                 </ul>
               </li>
