--- a/Project 4/templates/catalog.html
+++ b/Project 4/templates/catalog.html
@@ -6,7 +6,7 @@
         <h1><span class="fa fa-soccer-ball-o"></span> Latest Items</h1>
     </div>
     <div class="col-lg-4 align-self-center">
-        <a role="button" class="btn btn-success pull-right" href="{{ url_for('show_catalog') }}">Add New Menu Item</a>
+        <a role="button" class="btn btn-success pull-right" href="{{ url_for('create_item_default') }}">Add New Item</a>
     </div>
 </div>
 {% for latest_item in latest_items %}
