--- a/Project 4/templates/item_card.html
+++ b/Project 4/templates/item_card.html
@@ -33,8 +33,8 @@
                     </div>
                     <div class="row">
                         <div class="col-sm mt-3 justify-content-end btn-group btn-group-sm" role="group" aria-label="Modify">
-                            <a role="button" class="btn btn-warning" href="#">Edit</a>
-                            <a role="button" class="btn btn-danger" href="#">Delete</a>
+                            <a role="button" class="btn btn-warning" href="{{ url_for('edit_item', category_name=category_name, item_name=item['name']) }}">Edit</a>
+                            <a role="button" class="btn btn-danger" href="{{ url_for('delete_item', category_name=category_name, item_name=item['name']) }}">Delete</a>
                         </div>
                     </div>
                 </div>
