fixing category name issue in template

--- a/Project 4/templates/find_items.html
+++ b/Project 4/templates/find_items.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 mt-2 justify-content-sm-start">
-                            <p class="card-text"><b>Category: </b>{{ category_name }}</p>
+                            <p class="card-text"><b>Category: </b>{{ item['category']['name'] }}</p>
                         </div>
                     </div>
                     <div class="row mt-2">
