--- a/Project 4/templates/tail.html
+++ b/Project 4/templates/tail.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.slim.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
 {#<script>window.jQuery || document.write('<script src="{{ url_for('static', 'filename=jquery-slim.min.js') }}"><\/script>')</script>#}
 <script type="text/javascript" src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
