--- a/Project 4/templates/category_items.html
+++ b/Project 4/templates/category_items.html
@@ -6,7 +6,7 @@
         <h1><span class="fa fa-chevron-down"></span> {{ category_name }}</h1>
     </div>
     <div class="col-lg-4 align-self-center">
-        <a role="button" class="btn btn-success pull-right" href="{{ url_for('show_catalog') }}">Add New Menu Item</a>
+        <a role="button" class="btn btn-success pull-right" href="{{ url_for('show_catalog') }}">Add New Item</a>
     </div>
 </div>
 {% for item in items %}
