--- a/Project 5/css/style.css
+++ b/Project 5/css/style.css
@@ -78,6 +78,10 @@ body {
   text-decoration: none;
 }
 
+.wiki {
+  list-style: none;
+}
+
 @media(min-width:768px) {
   #wrapper {
     padding-left: 0;
